new nn and loss funcitions

--- a/dataset_facesRC.ipynb
+++ b/dataset_facesRC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1054,7 @@
        " ...]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1161,10 +1161,8 @@
     "        y_1 = int(y_cm - img_l/2.0)\n",
     "        y_2 = int(y_1 + img_l)\n",
     "        if min(x_1,y_1) < 0 or max(x_2,y_2)>250:\n",
-    "            print('Image size error')\n",
-    "            stop = True\n",
     "            if x_1 < 0:\n",
-    "                X_2 = x_2 - x_1\n",
+    "                x_2 = x_2 - x_1\n",
     "                x_1 = 0\n",
     "            if x_2 > 250:\n",
     "                x_1 = x_1 - x_2 + 250\n",
@@ -1178,12 +1176,14 @@
     "\n",
     "        img = cv.rectangle(img, (x_1,y_1), (x_2,y_2), (255,0,0))\n",
     "        img = cv.putText(img,\"Score:{:1.3f}\".format(fScore), (10,250), cv.FONT_HERSHEY_SIMPLEX, 0.3, (255,255,255))\n",
+    "        # img = img[y_1:y_2,x_1:x_2]\n",
+    "        # img = cv.resize(img,dsize=(105,105))\n",
     "        return img, stop, n_faces"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1191,134 +1191,6 @@
      "output_type": "stream",
      "text": [
       "The best choice: 1\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 1\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 1\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 1\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 1\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 1\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 1\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 1\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 1\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 1\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
-      "Aquí va una!!\n",
-      "The best choice: 0\n",
       "Aquí va una!!\n",
       "The best choice: 0\n",
       "Aquí va una!!\n",
@@ -1354,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
